--- a/ERPSYSTEM-GUI/VIew/Pages/About_Page.xaml
+++ b/ERPSYSTEM-GUI/VIew/Pages/About_Page.xaml
@@ -1,12 +1,37 @@
 ﻿<UserControl x:Class="ERPSYSTEM_GUI.VIew.Pages.About_Page"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:ERPSYSTEM_GUI.VIew.Pages"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        
-    </Grid>
+             Background="#374270">
+       <Border CornerRadius="5" Padding="20 40" VerticalAlignment="Center" HorizontalAlignment="Stretch" MaxWidth="8000"
+            Margin="50 0" Background="#374270">
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+
+            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 15 0">
+                <TextBlock Text="Manufacturer :" Style="{StaticResource AboutText}" />
+                <TextBlock Text="Produce Year :" Style="{StaticResource AboutText}" />
+                <TextBlock Text="Version : " Style="{StaticResource AboutText}" />
+                <TextBlock Text="Country : " Style="{StaticResource AboutText}" />
+                <TextBlock Text="City" Style="{StaticResource AboutText}" />
+                <TextBlock Text="Address" Style="{StaticResource AboutText}" />
+            </StackPanel>
+
+            <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15 0 0 0">
+                <TextBlock Text="Snowa" Style="{StaticResource AboutText}" />
+                <TextBlock Text="2023" Style="{StaticResource AboutText}" />
+                <TextBlock Text="1.0" Style="{StaticResource AboutText}" />
+                <TextBlock Text="Denmark " Style="{StaticResource AboutText}" />
+                <TextBlock Text="Allborg" Style="{StaticResource AboutText}" />
+                <TextBlock Text="Struervej 17" Style="{StaticResource AboutText}" />
+            </StackPanel>
+
+        </Grid>
+
+
+    </Border>
 </UserControl>
