--- a/ERPSYSTEM-GUI/VIew/Pages/About_Page.xaml
+++ b/ERPSYSTEM-GUI/VIew/Pages/About_Page.xaml
@@ -1,7 +1,6 @@
 ﻿<UserControl x:Class="ERPSYSTEM_GUI.VIew.Pages.About_Page"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Background="#374270">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
        <Border CornerRadius="5" Padding="20 40" VerticalAlignment="Center" HorizontalAlignment="Stretch" MaxWidth="8000"
             Margin="50 0" Background="#374270">
 
